--- a/about.html
+++ b/about.html
@@ -9,10 +9,11 @@
         <title>Inner Beauty Spa</title>
     </head>
     <body>
+        
         <header id="header">
-            <img src="./logoBrown1.jpg" />
+           <!-- <img src="./logoBrown1.jpg" class="logo" />-->
         </header>
-        <nav>
+        <nav id="pages">
             <a href="./about.html">About</a> |
             <a href="./home.html">Home</a> |
             <a href="./services.html">Services</a> |
