--- a/about.html
+++ b/about.html
@@ -3,15 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="chrome=l">
-        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="about.css" />
         <title>Inner Beauty Spa</title>
     </head>
     <body>
-        
         <header id="header">
-           <!-- <img src="./logoBrown1.jpg" class="logo" />-->
+           <!--<img src="./logoBrown1.jpg" class="logo" />-->
         </header>
         <nav id="pages">
             <a href="./about.html">About</a> |
