updated pages and added images directory

--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=l">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="shortcut icon" type="img/png" href="logoBrown.jpg" />
+        <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Joan&family=Nunito+Sans:wght@200&family=Spectral:wght@200&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" type="img/png" href="images/logoBrown.jpg" />
         <link rel="stylesheet" href="about.css" />
         <title>Inner Beauty Spa</title>
     </head>
@@ -29,23 +30,21 @@
             fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
              sunt in culpa qui officia deserunt mollit anim id est laborum."
         </p>
-        <h2>Founder - CEO</h2>
-        <img src="massageAteApol.jpg" id="founderCeo" />
+        <h2>Founder - CEO:</h2>
+        <img src="images/ateApolProfile2.jpg" id="founderCeo" />
         <p>
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam,<br>quis nostrud exercitation ullamco 
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-            dolor in reprehenderit in voluptate velit esse cillum dolore<br> eu 
-            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-            sunt in culpa qui officia deserunt mollit anim id est laborum." 
+            Genavia San Buenaventura has 20 years of experience in massage industry and Registered Massage Therapist.<br>
+            Knows different kinds of massage such as Therapuetic, Swedish, Deep Tissue, Lympathic, Shiatsu, Authentic Chinesse Foot Reflex, and Relaxation Massage.<br>
+            Knows how to fix Frozen Shoulder, Twisted Ankle (Tapilok), Sciatic Nerve Problem, Carpal Tunnel, and Hilot Filipino style of massage treatment.
         </p>
-    <footer>
-        <nav>
-            <a href="https://www.facebook.com/innerbeautyspayyc" class="fa fa-facebook"></a><br>
-            <a href="https://www.instagram.com/innerbeautyspayyc/?fbclid=IwAR1n3B_UNo4QHQ0PHDlFrcADm7E1nQ8qmVf47olumxAWCfuN3Hlunl10eg4" class="fa fa-instagram"></a><br>
-            <a href="fielgenavia@yahoo.com" id="email">fielgenavia@yahoo.com</a>
-        </nav>
-        <small>Copyright 2022</small>
-    </footer>
+    
+        <footer>
+            <nav>
+                <a href="https://www.facebook.com/innerbeautyspayyc" class="fa fa-facebook"></a><br>
+                <a href="https://www.instagram.com/innerbeautyspayyc/?fbclid=IwAR1n3B_UNo4QHQ0PHDlFrcADm7E1nQ8qmVf47olumxAWCfuN3Hlunl10eg4" class="fa fa-instagram"></a><br>
+                <a href="fielgenavia@yahoo.com" id="email">fielgenavia@yahoo.com</a>
+            </nav>
+            <small>Copyright 2022</small>
+        </footer>
     </body>
 </html>
