--- a/home.html
+++ b/home.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=l">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="shortcut icon" type="img/png" href="logoBrown.jpg" />
+        <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Joan&family=Nunito+Sans:wght@200&family=Spectral:wght@200&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" type="img/png" href="images/logoBrown.jpg" />
         <link rel="stylesheet" href="home.css" />
         <title>Inner Beauty Spa</title>
     </head>
@@ -15,7 +16,7 @@
         </header>
         <script type="text/javascript">
             alert('Welcome and Mabuhay! to Inner Beauty Spa!\n\n' +
-                    'Make sure to checkout our Special Offers!');
+                    'Make sure to checkout our Special Offer!');
         </script>
         <nav id="pages">
             <a href="./about.html">About</a> |
@@ -24,27 +25,13 @@
             <a href="./staff.html">Staff</a> |
             <a href="./contact.html">Contact</a>
         </nav>
-        <h2>What we Offer</h2>
         <p>
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam,<br>quis nostrud exercitation ullamco 
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-            dolor in reprehenderit in voluptate velit esse cillum dolore<br> eu 
-            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-             sunt in culpa qui officia deserunt mollit anim id est laborum."
+            Mind, body, soul relaxation, and glossy skin doesn't happened by chance<br>
+            it happens by appointment. Complimentary consultation and same day treatment.<br>
+            Make sure to checkout our <a href="./services.html"><strong><em>Special Offer!</em></strong></a>
         </p>
-        <img src="treatmentsServices.jpg" id="treatmentServices" />
-        <h2>Our Special Offer</h2>
-        <p>
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam,<br>quis nostrud exercitation ullamco 
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-            dolor in reprehenderit in voluptate velit esse cillum dolore<br> eu 
-            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-             sunt in culpa qui officia deserunt mollit anim id est laborum."
-        </p>
-        <img src="pricingTable1.jpg" id="treatmentServices" />
-        <img src="pricingTable2.jpg" id="treatmentServices" />
+        <img src="images/treatmentsServices.jpg" alt="treatments and massage" id="treatmentServices" />
+
     <footer>
         <nav>
             <a href="https://www.facebook.com/innerbeautyspayyc" class="fa fa-facebook"></a><br>
