--- a/services.html
+++ b/services.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="chrome=l">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Joan&family=Nunito+Sans:wght@200&family=Spectral:wght@200&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" type="img/png" href="images/logoBrown.jpg" />
+        <link rel="stylesheet" href="services.css" />
         <title>Inner Beauty Spa</title>
     </head>
     <body>
-        <ul>
-            <li><a href="./home.html">home</a></li>
-            <li><a href="./services.html">Services</a></li>
-            <p>testing</p>
-        </ul>
+        <header id="header">
+           <!--<img src="./logoBrown1.jpg" class="logo" />-->
+        </header>
+        <nav id="pages">
+            <a href="./about.html">About</a> |
+            <a href="./home.html">Home</a> |
+            <a href="./services.html">Services</a> |
+            <a href="./staff.html">Staff</a> |
+            <a href="./contacts.html">Contact</a>
+        </nav>
+        <h2>Special Offer:</h2>
+        <img src="images/prizingUpdatedTable1.jpg"  alt="prizing list1" />
+        <img src="images/prizingUpdatedTable2.jpg"  alt="prizing list2" />
+    <footer>
+        <nav>
+            <a href="https://www.facebook.com/innerbeautyspayyc" class="fa fa-facebook"></a><br>
+            <a href="https://www.instagram.com/innerbeautyspayyc/?fbclid=IwAR1n3B_UNo4QHQ0PHDlFrcADm7E1nQ8qmVf47olumxAWCfuN3Hlunl10eg4" class="fa fa-instagram"></a><br>
+            <a href="fielgenavia@yahoo.com" id="email">fielgenavia@yahoo.com</a>
+        </nav>
+        <small>Copyright 2022</small>
+    </footer>
     </body>
 </html>
