--- a/services.html
+++ b/services.html
@@ -22,9 +22,11 @@
             <a href="./contacts.html">Contact</a>
         </nav>
         <h2>Special Offer:</h2>
-        <img src="images/prizingUpdatedTable1.jpg"  alt="prizing list1" />
-        <img src="images/prizingUpdatedTable2.jpg"  alt="prizing list2" />
-    <footer>
+        <div id="pics">
+            <img src="images/prizingUpdatedTable1.jpg"  alt="prizing list1" />
+            <img src="images/prizingUpdatedTable2.jpg"  alt="prizing list2" />
+        </div>
+        <footer>
         <nav>
             <a href="https://www.facebook.com/innerbeautyspayyc" class="fa fa-facebook"></a><br>
             <a href="https://www.instagram.com/innerbeautyspayyc/?fbclid=IwAR1n3B_UNo4QHQ0PHDlFrcADm7E1nQ8qmVf47olumxAWCfuN3Hlunl10eg4" class="fa fa-instagram"></a><br>
