updated html and css files. added staff, contact page

--- a/about.html
+++ b/about.html
@@ -15,11 +15,11 @@
            <!--<img src="./logoBrown1.jpg" class="logo" />-->
         </header>
         <nav id="pages">
-            <a href="./about.html">About</a> |
-            <a href="./home.html">Home</a> |
-            <a href="./services.html">Services</a> |
-            <a href="./staff.html">Staff</a> |
-            <a href="./contact.html">Contact</a>
+            <a href="./about.html" id="navigation">About</a> |
+            <a href="./home.html" id="navigation">Home</a> |
+            <a href="./services.html" id="navigation">Services</a> |
+            <a href="./staff.html" id="navigation">Staff</a> |
+            <a href="./contacts.html" id="navigation">Contact</a>
         </nav>
         <h2>About:</h2>
         <p>
