--- a/contacts.html
+++ b/contacts.html
@@ -5,8 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="chrome=l">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="shortcut icon" type="img/png" href="logoBrown.jpg" />
-        <link rel="stylesheet" href="services.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Joan&family=Nunito+Sans:wght@200&family=Spectral:wght@200&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" type="img/png" href="images/logoBrown.jpg" />
+        <link rel="stylesheet" href="contacts.css" />
         <title>Inner Beauty Spa</title>
     </head>
     <body>
@@ -14,15 +15,18 @@
            <!--<img src="./logoBrown1.jpg" class="logo" />-->
         </header>
         <nav id="pages">
-            <a href="./about.html">About</a> |
-            <a href="./home.html">Home</a> |
-            <a href="./services.html">Services</a> |
-            <a href="./staff.html">Staff</a> |
-            <a href="./contacts.html">Contact</a>
+            <a href="./about.html" id="navigation">About</a> |
+            <a href="./home.html" id="navigation">Home</a> |
+            <a href="./services.html" id="navigation">Services</a> |
+            <a href="./staff.html" id="navigation">Staff</a> |
+            <a href="./contacts.html" id="navigation">Contact</a>
         </nav>
-        <h2>Special Offer:</h2>
-        <img src="pricingTable1.jpg" class="pricingTable" />
-        <img src="pricingTable2.jpg" class="pricingTable" />
+        <h2>Book Now:</h2>
+        <img src="images/logoBrown.jpg" />
+        <h2>Telephone: 587-429-8304</h2>
+        <h2 id="email">Email: fielgenevia@yahoo.com</h2>
+        <h2>Location: 3009 23 Ave SW, Calgary, AB T3E 0J3</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2509.094881984394!2d-114.13475466857228!3d51.03286828773931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53716f24fdac5d81%3A0x1e3ae0b9466b3efe!2sInner%20Beauty%20Spa%20Massage%20and%20Skin%20Clinic!5e0!3m2!1sen!2sus!4v1654993105339!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <footer>
         <nav>
             <a href="https://www.facebook.com/innerbeautyspayyc" class="fa fa-facebook"></a><br>
