--- a/home.html
+++ b/home.html
@@ -19,15 +19,14 @@
                     'Make sure to checkout our Special Offer!');
         </script>
         <nav id="pages">
-            <a href="./about.html">About</a> |
-            <a href="./home.html">Home</a> |
-            <a href="./services.html">Services</a> |
-            <a href="./staff.html">Staff</a> |
-            <a href="./contact.html">Contact</a>
+            <a href="./about.html" id="navigation">About</a> |
+            <a href="./home.html" id="navigation">Home</a> |
+            <a href="./services.html" id="navigation">Services</a> |
+            <a href="./staff.html" id="navigation">Staff</a> |
+            <a href="./contacts.html" id="navigation">Contact</a>
         </nav>
         <p>
-            Mind, body, soul relaxation, and glossy skin doesn't happened by chance<br>
-            it happens by appointment. Complimentary consultation and same day treatment.<br>
+            Self-care is not selfish. It is the practice of caring for one's own health, well-being and happiness.<br>
             Make sure to checkout our <a href="./services.html"><strong><em>Special Offer!</em></strong></a>
         </p>
         <img src="images/treatmentsServices.jpg" alt="treatments and massage" id="treatmentServices" />
