--- a/staff.html
+++ b/staff.html
@@ -7,13 +7,17 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Joan&family=Nunito+Sans:wght@200&family=Spectral:wght@200&display=swap" rel="stylesheet">
         <link rel="shortcut icon" type="img/png" href="images/logoBrown.jpg" />
-        <link rel="stylesheet" href="services.css" />
+        <link rel="stylesheet" href="staff.css" />
         <title>Inner Beauty Spa</title>
     </head>
     <body>
         <header id="header">
            <!--<img src="./logoBrown1.jpg" class="logo" />-->
         </header>
+       <!--<script type="text/javascript">
+            alert('Welcome and Mabuhay! to Inner Beauty Spa!\n\n' +
+                    'Make sure to checkout our Special Offer!');
+        </script>-->
         <nav id="pages">
             <a href="./about.html" id="navigation">About</a> |
             <a href="./home.html" id="navigation">Home</a> |
@@ -21,12 +25,34 @@
             <a href="./staff.html" id="navigation">Staff</a> |
             <a href="./contacts.html" id="navigation">Contact</a>
         </nav>
-        <h2>Special Offer:</h2>
-        <div id="pics">
-            <img src="images/prizingUpdatedTable1.jpg"  alt="prizing list1" />
-            <img src="images/prizingUpdatedTable2.jpg"  alt="prizing list2" />
+        <h2>Meet our Team:</h2>
+        <div class="dimple">
+            <img src="images/dimple1.jpg" id="dimple-profile-pic" />
+            <div class="dimplea">
+                <h1>Genelle San Buenaventura</h1>
+                <ul>
+                <li>Licensed Clinical Esthetician</li>
+                <li>Knows how to assess different types of skin.</li>
+                <li>Knows which treatment is suitable for each skin type.</li>
+                <li>Performs Microneedling.</li>
+                </ul>
+            </div>
         </div>
-        <footer>
+        <div class="uniz">
+            <img src="images/niz.jpg" id="niz-profile-pic" />
+            <div class="uniza">
+                <h1>Uniz Avila<br>(Sub-Contract/Associate)</h1>
+                <p>
+                    Hello! My name is Uniz, certified Eyelashes Technician/Clincal Esthetician.<br>
+                    <strong>I am available for bookings Monday through Saturday from 4pm to 6pm
+                    and Sunday from 10am to 5pm.</strong> I been working full-time
+                    in the medical field for five years as a Dental Assistant. 
+                    Also I am a Eyelashes, Facial, Hydrafacial, Microdermabrasion, and
+                    Dermaplaning.
+                </p>
+            </div>
+        </div>
+    <footer>
         <nav>
             <a href="https://www.facebook.com/innerbeautyspayyc" class="fa fa-facebook"></a><br>
             <a href="https://www.instagram.com/innerbeautyspayyc/?fbclid=IwAR1n3B_UNo4QHQ0PHDlFrcADm7E1nQ8qmVf47olumxAWCfuN3Hlunl10eg4" class="fa fa-instagram"></a><br>
