updated profile info to commentary

--- a/staff.html
+++ b/staff.html
@@ -30,18 +30,16 @@
             <img src="images/dimple1.jpg" id="dimple-profile-pic" />
             <div class="dimplea">
                 <h1>Genelle San Buenaventura</h1>
-                <ul>
-                <li>Licensed Clinical Esthetician</li>
-                <li>Knows how to assess different types of skin.</li>
-                <li>Knows which treatment is suitable for each skin type.</li>
-                <li>Performs Microneedling.</li>
-                </ul>
+                <p>
+                    Licensed Clinical esthetician - Knows how to assess different types of skin 
+                    and which treatment is suitable for each skin type, and performs microneedling.
+                </p>
             </div>
         </div>
         <div class="uniz">
             <img src="images/niz.jpg" id="niz-profile-pic" />
             <div class="uniza">
-                <h1>Uniz Avila<br>(Sub-Contract/Associate)</h1>
+                <h1>Uniz Babay<br>(Sub-Contract/Associate)</h1>
                 <p>
                     Hello! My name is Uniz, certified Eyelashes Technician/Clincal Esthetician.<br>
                     <strong>I am available for bookings Monday through Saturday from 4pm to 6pm
