--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
         <header id="header">
            <!--<img src="./logoBrown1.jpg" class="logo" />-->
         </header>
-        <nav class="sticky">
+        <nav id="pages">
             <a href="./about.html" id="navigation">About</a> |
             <a href="./home.html" id="navigation">Home</a> |
             <a href="./services.html" id="navigation">Services</a> |
